About page, dark mode, small fixes

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,7 +2,7 @@
     height: 100vh;
 }
 .inner-content-container {
-    background-color: #f5f5f5;
+    /*background-color: #f5f5f5;*/
     border-radius: 20px;
     box-shadow: 1px 1px 5px 1px #f5f5f5;
     padding: 20px;
